force-app/main/default/objects/Mall__c/Mall__c.object-meta.xml
<CustomObject>
    <label>Mall</label>
    <nameField>
        <displayFormat>Mall-{0000}</displayFormat>
        <label>Mall Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Malls</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>