force-app/main/default/objects/Mall__c/fields/Mall_Email__c.field-meta.xml
<CustomField>
    <fullName>Mall_Email__c</fullName>
    <label>Mall Email</label>
    <type>Email</type>
</CustomField>