force-app/main/default/objects/Mall__c/fields/Mall_ID__c.field-meta.xml
<CustomField>
    <fullName>Mall_ID__c</fullName>
    <label>Mall ID</label>
    <type>TextArea</type>
</CustomField>