force-app/main/default/objects/Mall__c/fields/POC_Designation__c.field-meta.xml
<CustomField>
    <fullName>POC_Designation__c</fullName>
    <label>POC Designation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>