force-app/main/default/objects/Mall__c/fields/POC_Ext__c.field-meta.xml
<CustomField>
    <fullName>POC_Ext__c</fullName>
    <label>POC Ext</label>
    <length>250</length>
    <type>Text</type>
</CustomField>