force-app/main/default/objects/Mall__c/fields/POC_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Name__c</fullName>
    <label>POC Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>