force-app/main/default/objects/Mall__c/fields/POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>POC_Phone__c</fullName>
    <label>POC Phone</label>
    <type>Phone</type>
</CustomField>