force-app/main/default/objects/Mall__c/fields/Sites__c.field-meta.xml
<CustomField>
    <fullName>Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sites</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Malls</relationshipLabel>
    <relationshipName>Malls</relationshipName>
    <type>Lookup</type>
</CustomField>